@@ -1,0 +1,45 @@
+= zeal(1)
+:doctype: manpage
+
+== Name
+
+zeal - a simple offline API documentation browser
+
+== Synopsis
+
+*zeal* _options_
+
+== Description
+
+zeal is a simple offline API documentation browser inspired by Dash (OS X app),
+available for Linux and Windows. It provides the following features:
+
+* Quickly search documentation using Alt+Space (or customised) hotkey to display
+  Zeal from any place in your workspace.
+* Search in multiple sets of documentation at once.
+* Don't be dependent on your internet connection.
+* Integrate Zeal with Emacs, Sublime Text, or Vim.
+
+== Options
+
+*-h*, *--help*
+
+    Displays this help.
+
+*-v*, *--version*
+
+    Displays version information.
+
+*-q*, *--query* _term_
+
+    Query _search term_.
+
+*-f*, *--force*
+
+    Force the application run.
+
+== Author
+
+This manual page was written by mailto:czchen@debian.org[ChangZhuo Chen
+'<czchen@debian.org>'] for the *Debian GNU/Linux system* (but may be used by
+others).
